# esp32-smart-dustbin

./: .gitignore  LICENSE  README.md
frontend/: app.js
hw_code/: hw_code.ino
ml_backend/: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
ml_backend/configs/: settings.json
ml_backend/models/: labels.txt
ml_backend/server/: app.py  bulk_test.py  main.py  test_embedding.py
