[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-course"
version = "0.1.0"
description = "ESP32 smart waste segregator ML backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.1.0",
    "pillow>=11.0.0",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
]

[tool.setuptools]
packages = []
